--- a/telemetry/otel-collector-config.yml
+++ b/telemetry/otel-collector-config.yml
@@ -5,11 +5,6 @@ receivers:
         endpoint: "0.0.0.0:4318"
 
 exporters:
-  prometheusremotewrite:
-      endpoint: http://prometheus:9090/api/v1/write
-      target_info:
-        enabled: true
-
   prometheus:
     endpoint: "0.0.0.0:8889"
 
@@ -34,4 +29,4 @@ service:
     # The receiver is just a dummy and never used; added to pass validation requiring at least one receiver in a pipeline.
     metrics/spanmetrics:
       receivers: [spanmetrics]
-      exporters: [prometheus, prometheusremotewrite]
+      exporters: [prometheus]
