chore: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "non-functional-test",
+  "name": "system-observability",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
