--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,15 @@ services:
     networks:
       - backend
 
+  account-services:
+    build:
+      dockerfile: ./account/Dockerfile
+    container_name: account-services
+    ports:
+      - 3001:3001
+    networks:
+      - backend
+
   prometheus:
     image: prom/prometheus
     container_name: prometheus
